--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -192,11 +192,16 @@ footer {
     }
 
     .main-menu {
-        margin: 0 auto;
+        margin: 0 0;
+        padding: 2px 5px;
         background-color: white;
         width: 100%;
-        justify-content: center;
+        justify-content: center !important;
     }
     
+    .about-us-body {
+        text-align: left;
+        width: 100%;
+        padding:10px;
+    }
   }
-
