--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -196,7 +196,7 @@ footer {
         padding: 2px 5px;
         background-color: white;
         width: 100%;
-        justify-content: center !important;
+        justify-content: space-evenly !important;
     }
     
     .about-us-body {
